JDK 25: update JEPs notes